syntax = "proto3";

package chat;

option go_package = ".;api";

message UserData {
  string ip = 1;
  string login = 2;
  string pass = 3;
}

message AllowUser {
  bool ok = 1;
}

message StatusMsg {
  string error = 1;
}

message IpData {
  string IpAddr = 1;
  string List = 2;
}

service ABFService{
  rpc AuthRequest(UserData) returns(AllowUser){}
  rpc ResetBucket(UserData) returns(StatusMsg){}
  rpc AddToList(IpData) returns(StatusMsg){}
  rpc RemoveFromList(IpData) returns(StatusMsg){}

}

//protoc --go_out=plugins=grpc:api/grpc api/api.proto -I .